--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>repo.me</title>
+    <title>ZxverOwner's Repo</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="d-flex align-items-center">
           <img src="CydiaIcon.png" alt="Repository Icon" />
-          <h1>repo.me</h1>
+          <h1>zxverowner.github.io</h1>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="card-body">
           <h5 class="card-title mb-3">repo.me</h5>
           <p class="card-text mb-4">
-            a modern apt repository template built by the community.
+            random ass repo where i put some tweaks.
           </p>
           <div class="d-flex flex-wrap gap-2">
             <a class="btn btn-primary" href="sileo://source/https://REPLACEHERE"
