--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ZxverOwner's Repo</title>
+    <title>zxd's garage</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="d-flex align-items-center">
           <img src="CydiaIcon.png" alt="Repository Icon" />
-          <h1>zxverowner.github.io</h1>
+          <h1>zxd's garage</h1>
         </div>
       </div>
     </div>
