--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
     <div class="container mb-4">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title mb-3">repo.me</h5>
+          <h5 class="card-title mb-3">zxd's garage</h5>
           <p class="card-text mb-4">
             random ass repo where i put some tweaks.
           </p>
           <div class="d-flex flex-wrap gap-2">
-            <a class="btn btn-primary" href="sileo://source/https://REPLACEHERE"
+            <a class="btn btn-primary" href="sileo://source/https://zxverowner.github.io"
               >Add to Sileo</a
             >
             <a
               class="btn btn-primary"
-              href="zbra://sources/add/https://REPLACEHERE"
+              href="zbra://sources/add/https://zxverowner.github.io"
               >Add to Zebra</a
             >
-            <a class="btn btn-primary" href="apt-repo://https://REPLACEHERE"
+            <a class="btn btn-primary" href="apt-repo://https://zxverowner.github.io"
               >Add to Saily</a
             >
             <a
               class="btn btn-primary"
-              href="cydia://url/https://cydia.saurik.com/api/share#?source=https://REPLACEHERE"
+              href="cydia://url/https://cydia.saurik.com/api/share#?source=https://zxverowner.github.io"
               >Add to Cydia</a
             >
           </div>
